--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,17 @@
     --chart-5: 27 87% 67%;
   }
 
+  @layer utilities {
+    .bg-gradient-custom {
+      background: rgb(6, 65, 54);
+      background: linear-gradient(
+        90deg,
+        rgba(6, 65, 54, 1) 0%,
+        rgba(0, 171, 131, 1) 100%
+      );
+    }
+  }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
